--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <script>
+      window.clickmagick_cmc = {
+          uid: '197173',
+          hid: '1382118209',
+          cmc_project: 'Balmorex Pro',
+          vid_info: 'on',
+      }
+  </script>
+  <script src='//cdn.clkmc.com/cmc.js'></script>
+  
   </body>
 </html>
