--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Back Pain Solution</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,16 +14,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
-    <script>
-      window.clickmagick_cmc = {
-          uid: '197173',
-          hid: '1382118209',
-          cmc_project: 'Balmorex Pro',
-          vid_info: 'on',
-      }
-  </script>
-  <script src='//cdn.clkmc.com/cmc.js'></script>
-  
   </body>
 </html>
