--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script>
+      window.clickmagick_cmc = {
+          uid: '197173',
+          hid: '1382118209',
+          cmc_project: 'Balmorex Pro',
+          vid_info: 'on',
+      }
+    </script>
+    <script src='//cdn.clkmc.com/cmc.js'></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
