trackeamento para action

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           hid: '1382118209',
           cmc_project: 'Balmorex Pro',
           vid_info: 'on',
+          log_action: 'ps-click-vsl'
       }
     </script>
     <script src='//cdn.clkmc.com/cmc.js'></script>
