--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           uid: '197173',
           hid: '1382118209',
           cmc_project: 'Balmorex Pro',
+          cmc_goal: 'a',
           vid_info: 'on',
           log_action: 'ps-click-vsl'
       }
